feat(api): email verification for signup and login
